# mia-77

./: .gitignore  .replit  =0.25.2  backend_test.py  jest.config.ts  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
api/: agent_logic.py  data_source_sync_handler.py  data_source_tester.py  database.py  kpi_calculator.py  main.py  market_intelligence_agent.db  requirements.txt  startup.py  test_api_keys.py  test_document_intelligence.py  test_supabase_connection.py  text_processor.py
app/: page.tsx
app/api/agent/sync/: route.ts
app/api/analysis/: route.ts
app/api/chat/: route.ts
app/api/competitors/: route.ts
app/api/customer-insights/: route.ts
app/api/kpi/: route.ts
app/api/reports/: route.ts
app/api/trends/: route.ts
app/auth/callback/: route.ts
app/chat/: page.tsx
app/competitors/: page.tsx
app/components/: historical-kpi-chart-dialog.tsx  kpi-card.tsx  onboarding-flow.tsx  widget-selector-dialog.tsx
app/customer-insights/: page.tsx
app/dashboard/: page.tsx
app/data-integration/: page.tsx
app/downloads/: page.tsx
app/login/: page.tsx
app/register/: page.tsx
app/settings/: page.tsx
app/trends/: page.tsx
attached_assets/: Pasted--workspace-api-uvicon-main-app-host-0-0-0-0-port-8000-reload-bash-uvicon-command-not-foun-1750841102830_1750841102831.txt  _1750835988717.env
components/: api-key-manager.tsx  app-sidebar.tsx  auth-provider.tsx  feature-tracker.tsx  file-upload-manager.tsx  real-time-sync.tsx
lib/: api.ts
lib/__tests__/: api.test.ts
scripts/: 01_create_tables.sql
(+4 files in other folders)
